♻️ refactor: converter 수정